Fixed players online stuff and moved to Java 21 so that there's no more preview flags